@@ -46,7 +46,7 @@ Author :<BR>Erik de Castro Lopo
 
 </DIV>
 	<IMG SRC=
-	"/cgi-bin/Count.cgi?ft=6|frgb=55;55;55|tr=0|md=6|dd=B|st=1|sh=1|df=src_dl.dat" 
+	"/cgi-bin/Count.cgi?ft=6|frgb=55;55;55|tr=0|md=6|dd=B|st=1|sh=1|df=src_dl.dat"
 	HEIGHT=30 WIDTH=100 ALT="counter.gif">
 </DIV>
 
@@ -59,18 +59,21 @@ Author :<BR>Erik de Castro Lopo
 
 <H1><B>Download</B></H1>
 <P>
-	This is the latest version of Secret Rabbit Code. 
+	This is the latest version of Secret Rabbit Code.
 </P>
 	<UL>
-	<LI>Source code as a .tar.gz : 
+	<LI>Source code as a .tar.gz :
 			<A HREF="libsamplerate-0.1.7.tar.gz">libsamplerate-0.1.7.tar.gz</A>
+		and
+			<A HREF="libsamplerate-0.1.7.tar.gz.asc">(GPG signature)</A>
+
 	</UL>
 <P>
-	Compiling libsamplerate is relatively easy. The INSTALL file in the top 
-	level directory gives instructions on compiling and installing 
-	libsamplerate on Unix-like systems (including MacOSX). For Win32 there 
-	are instructions in the doc/ directory of the tarball. 
-	These instructions are mirrored 
+	Compiling libsamplerate is relatively easy. The INSTALL file in the top
+	level directory gives instructions on compiling and installing
+	libsamplerate on Unix-like systems (including MacOSX). For Win32 there
+	are instructions in the doc/ directory of the tarball.
+	These instructions are mirrored
 		<A HREF="win32.html">here</A>.
 </P>
 
